# code-pulse

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codepulse-config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codepulse.yml
.kiro/hooks/: code-quality-review.kiro.hook  sync-docs-on-change.kiro.hook
.kiro/specs/code-pulse-analyzer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/code_pulse/: __init__.py  cli.py
src/code_pulse/analyzers/: agentic_analyzer.py  base.py  coverage_analyzer.py  dependency_analyzer.py  git_analyzer.py  jscpd_analyzer.py  lizard_analyzer.py  ownership_analyzer.py  prompt_scanner.py  registry.py  semgrep_analyzer.py  sonarqube_adapter.py  standards_loader.py
src/code_pulse/core/: __init__.py  config.py  config_validator.py  discovery.py  models.py
src/code_pulse/engine/: __init__.py  scoring.py  workflow.py
src/code_pulse/reporting/: __init__.py  cost.py  report.py  trend.py
src/code_pulse/reporting/templates/: ai_insights.md.j2  ai_summary.md.j2  file_detail.md.j2  index.md.j2  prompt_security.md.j2  summary.md.j2  team_insights.md.j2  violations.md.j2
src/code_pulse/standards/predefined/: airbnb-style-javascript.md  angular-standards.md  api-first-standards.md  clean-code.md  cloud-native-devops.md  design-patterns.md  domain-driven-design.md  generator-standards.md  google-style-java.md  (+12 more)
tests/: test_prompt_scanner.py
(+1 files in other folders)
