[project]
name = "code-pulse"
version = "0.1.0"
description = "A LangGraph-orchestrated, multi-analyzer maintainability scorer for codebases"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain-core",
    "lizard",
    "GitPython>=3.1.0",
    "PyYAML",
    "requests",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
llm = [
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-ollama",
]
observability = [
    "langsmith",
    "langfuse",
]
dev = [
    "hypothesis",
    "pytest",
]
all = [
    "code-pulse[llm,observability,dev]",
]

[project.scripts]
code-pulse = "code_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_pulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
